nav bar was too short fix

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,7 +5,7 @@ body {
 .topnav {
     height: 3.5rem;
     width: 100vw;
-    max-width: 75rem;
+    max-width: 85vw;
     margin: 0 auto;
     padding: 1rem 2rem;
     display: flex;
